# til-ai-26

./: .gitignore  FINAL_SUBMISSIONS.md  README.md  auto_submit.sh
ae/: .dockerignore  Dockerfile
asr/: Dockerfile  Dockerfile.nemo-base  Dockerfile.pytorch-runtime  bench_postprocess.py  bench_postprocess_results.json  requirements.txt
cv/: .dockerignore  .gitignore  Dockerfile  RESEARCH.md  SOLUTION.md  build.sh  conftest.py  requirements.txt  submit_aug_variants.sh  submit_no_retrain.sh  watch_and_swap.sh  watch_yolo11x_epochs.sh
cv_qh/: .gitignore  Dockerfile  README.md  autosubmit.sh  class_names.py  conftest.py  eval_local.py  infer.py  prepare_data.py  promote_checkpoint.sh  pyproject.toml  submit_epoch.sh  tail_training.sh  train.py
cv_qh/src/: bbox_utils.py  cv_manager.py  cv_server.py
cv_qh/tests/: test_class_names.py  test_infer_format.py  test_prepare_data.py
cv_squeeze/: Dockerfile  Dockerfile.slim  build.sh  build_slim.sh  conftest.py
nlp_cheese/: Dockerfile
nlp_orphan/: .dockerignore  Dockerfile  eval_results.json  raft_build_data.py  raft_train.py  retrieval_diag.py  retrieval_diag2.py  retrieval_diag3.py
nlp_shizhen/: .dockerignore  Dockerfile  eval_local.py  eval_results.json  requirements.txt
noise/: .dockerignore  Dockerfile  calibrate.py  eval_attack.py  requirements.txt
shizhen-suprise-server/: .gitignore  README.md  agents.example.json  agents.frozen-gpt-vs-yilin.algo.json  agents.gemini-traitgpt5-yilin-xinyang-v1base12.json  agents.gemini-traitgpt5-yilinfrozen-yilincurrent-xinyang-v1base11.json  agents.yilin-vs-shizhen-mix.json  (+5 more)
(+295 files in other folders)
