[project]
name = "cv-qh-rfdetr"
version = "0.0.1"
description = "RF-DETR experimentation harness for TIL Novice CV"
requires-python = ">=3.10,<3.13"
dependencies = [
    "rfdetr[train,loggers]==1.7.0",
    "pycocotools>=2.0.7",
    "tqdm>=4.66",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
